# StormByte-Alchemist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VERSION  configure_windows.bat  deploy_linux.sh  deploy_windows.bat  makerelease.sh  setup_windows.bat
Alchemist/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Alchemy/: CMakeLists.txt  config.cxx  config.hxx  info.cxx  info.hxx  path.cxx  path.hxx  visibility.h
Alchemy/config/: CMakeLists.txt  codec.cxx  codec.hxx  default_linux.cfg  default_windows.cfg  file.cxx  file.hxx
Alchemy/database/: CMakeLists.txt  alchemy.cxx  alchemy.hxx  create.sql  file.cxx  file.hxx  storage.cxx  storage.hxx
Alchemy/executable/: ffmpeg.cxx  ffmpeg.hxx  ffprobe.cxx  ffprobe.hxx  hdr10plus.cxx  hdr10plus.hxx
Alchemy/media/: codec.cxx  codec.hxx  file.cxx  file.hxx  metadata.cxx  metadata.hxx  stream.cxx  stream.hxx  type.hxx
Alchemy/media/audio/: codec.cxx  codec.hxx  metadata.cxx  metadata.hxx  stream.cxx  stream.hxx
Alchemy/media/audio/codec/: aac.cxx  aac.hxx  ac3.cxx  ac3.hxx  atmos.cxx  atmos.hxx  copy.cxx  copy.hxx  dts.cxx  dts.hxx  eac3.cxx  eac3.hxx  fdk_aac.cxx  fdk_aac.hxx  mp3.cxx  mp3.hxx  opus.cxx  opus.hxx  wav.cxx  wav.hxx
Alchemy/media/subtitle/: codec.cxx  codec.hxx  metadata.cxx  metadata.hxx  stream.cxx  stream.hxx
Alchemy/media/subtitle/codec/: ass.cxx  ass.hxx  copy.cxx  copy.hxx  pgs.cxx  pgs.hxx  subrip.cxx  subrip.hxx
Alchemy/media/video/: codec.cxx  codec.hxx  color.cxx  color.hxx  hdr10.cxx  hdr10.hxx  metadata.cxx  metadata.hxx  resolution.cxx  resolution.hxx  stream.cxx  stream.hxx
Alchemy/media/video/codec/: copy.cxx  copy.hxx  h264.cxx  h264.hxx  h265.cxx  h265.hxx  xvid.cxx  xvid.hxx
Alchemy/process/: ffmpeg.cxx  ffmpeg.hxx  ffprobe.cxx  ffprobe.hxx  hdr10plus.cxx  hdr10plus.hxx
Alchemy/system/: config.cxx  config.hxx  ffmpeg.cxx  ffmpeg.hxx  ffprobe.cxx  ffprobe.hxx  hdr10plus.cxx  hdr10plus.hxx
Alchemy/system/executable/: ffmpeg.cxx  ffmpeg.hxx  ffprobe.cxx  hdr10plus.cxx
frontend/: CMakeLists.txt  application.cxx  application.hxx  configuration.cxx  configuration.hxx  main.cxx
frontend/config/: StormByte-videoconvert.conf
frontend/configuration/: configuration.cxx  configuration.hxx
frontend/init/: StormByte-videoconvert
frontend/task/: base.cxx  base.hxx  daemon.cxx  daemon.hxx  help.cxx  help.hxx  interactive.cxx  interactive.hxx  parse_cli.cxx  parse_cli.hxx  test.cxx  test.hxx
lib/: CMakeLists.txt  configuration.cxx  executable.cxx  executable.hxx  info.cxx  info.hxx  types.hxx  visibility.h  visibility.hxx
lib/Alchemy/: info.cxx  info.hxx
lib/Alchemy/database/: file.hxx  sqlite3.cxx  sqlite3.hxx
lib/Alchemy/media/: codec.cxx  codec.hxx  file.cxx  stream.hxx
lib/Alchemy/media/audio/: codec.cxx  codec.hxx  metadata.cxx  metadata.hxx  stream.cxx
lib/Alchemy/media/subtitle/: stream.hxx
lib/Alchemy/media/video/: codec.hxx  hdr10.cxx  metadata.hxx  resolution.cxx  stream.cxx
lib/Alchemy/system/: config.cxx  config.hxx  executable.cxx  executable.hxx  pipe.cxx  pipe.hxx  worker.cxx  worker.hxx
lib/configuration/: base.cxx  base.hxx
lib/database/: CMakeLists.txt  create.sql  data.hxx  file.cxx  file.hxx  sqlite3.cxx  sqlite3.hxx
lib/ffmpeg/: ffmpeg.cxx  ffmpeg.hxx
lib/ffmpeg/stream/: base.cxx  base.hxx  ignore.cxx  ignore.hxx
lib/ffprobe/: ffprobe.cxx  ffprobe.hxx
lib/logger/: logger.cxx  logger.hxx
lib/media/: attribute.hxx  base.hxx  codec.cxx  codec.hxx  codecs.cxx  codecs.hxx  container.cxx  container.hxx  decoder.cxx  decoder.hxx  decoders.cxx  decoders.hxx  encoder.cxx  encoder.hxx  encoders.cxx  encoders.hxx  feature.hxx  file.cxx  file.hxx  info.cxx  info.hxx  item.cxx  item.hxx  media.cxx  media.hxx  metadata.cxx  metadata.hxx  properties.cxx  properties.hxx  stream.cxx  stream.hxx  type.hxx
lib/media/audio/: codec.cxx  codec.hxx  metadata.cxx  metadata.hxx  stream.cxx  stream.hxx
lib/media/codec/: audio.cxx  audio.hxx  base.cxx  base.hxx  image.cxx  image.hxx  subtitle.cxx  subtitle.hxx  video.cxx  video.hxx
lib/media/container/: aac.cxx  aac.hxx  ac3.cxx  ac3.hxx  avi.cxx  avi.hxx  dts.cxx  dts.hxx  mkv.cxx  mkv.hxx  mp3.cxx  mp3.hxx  mp4.cxx  mp4.hxx  ogg.cxx  ogg.hxx  opus.cxx  opus.hxx  unknown.cxx  unknown.hxx  wmv.cxx  wmv.hxx
lib/media/decoder/: audio.cxx  audio.hxx  image.cxx  image.hxx  video.cxx  video.hxx
lib/media/encoder/: audio.cxx  audio.hxx  copy.cxx  copy.hxx  image.cxx  image.hxx  video.cxx  video.hxx
lib/media/file/: base.cxx  base.hxx  in.cxx  in.hxx  infile.cxx  infile.hxx  out.cxx  out.hxx
lib/media/metadata/: audio.cxx  audio.hxx  subtitle.cxx  subtitle.hxx  video.cxx  video.hxx
lib/media/stream/: audio.cxx  audio.hxx  base.cxx  base.hxx  subtitle.cxx  subtitle.hxx  video.cxx  video.hxx
lib/media/subtitle/: codec.cxx  codec.hxx  metadata.cxx  metadata.hxx  stream.cxx  stream.hxx
lib/media/video/: codec.cxx  codec.hxx  color.cxx  color.hxx  hdr10.cxx  hdr10.hxx  metadata.cxx  metadata.hxx  resolution.cxx  resolution.hxx  stream.cxx  stream.hxx
lib/system/: config.cxx  config.hxx  executable.cxx  executable.hxx  ffmpeg.cxx  ffmpeg.hxx  ffprobe.cxx  ffprobe.hxx  hdr10plus.cxx  hdr10plus.hxx  pipe.cxx  pipe.hxx  worker.cxx  worker.hxx
lib/system/executable/: ffmpeg.cxx  ffmpeg.hxx  ffprobe.cxx  ffprobe.hxx  hdr10plus.cxx  hdr10plus.hxx
lib/system/linux/: executable.cxx  executable.hxx  pipe.cxx  pipe.hxx
lib/system/windows/: executable.cxx  executable.hxx  pipe.cxx  pipe.hxx
lib/task/: base.cxx  base.hxx  execute.cxx  execute.hxx  execute_ffmpeg.cxx  execute_ffmpeg.hxx  execute_ffprobe.cxx  execute_ffprobe.hxx  execute_ffprobe_hdr.cxx  execute_ffprobe_hdr.hxx  execute_ffprobe_streams.cxx  execute_ffprobe_streams.hxx  execute_ffprobe_video_color.cxx  execute_ffprobe_video_color.hxx
lib/task/cli/: base.cxx  base.hxx
lib/task/config/: base.cxx  base.hxx
lib/task/execute/: base.cxx  base.hxx
lib/test/: test.cxx  test.h
lib/utils/: display.cxx  display.hxx  filesystem.cxx  filesystem.hxx  input.cxx  input.hxx  logger.cxx  logger.hxx  numbers.cxx  numbers.hxx
(+347 files in other folders)
